CS_SBOX_20150209_01/Metadata/unpackaged/objects/SBQQ__Subscription__c.object
<CustomObject>
    <description>Subscription to a product or service currently or previously owned by a customer.</description>
    <fields>
        <fullName>CRM_Product_Name__c</fullName>
        <description>Created by LM on 2/25/2014 for Phase2</description>
        <label>CRM Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissionable_Product__c</fullName>
        <formula>SBQQ__Product__r.Commissionable_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissionable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Type__c</fullName>
        <formula>TEXT(SBQQ__QuoteLine__r.SBQQ__Quote__r.SBQQ__Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Adjustment_Reason__c</fullName>
        <description>Created by LM on 11/18/2013 for Phase2 rollout</description>
        <label>Potential Adjustment Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Adjusted to 12 Month Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency not Renewing Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval from Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit for Existing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Opp/Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched previous opp&apos;s pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Cycle Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved Opp to Other Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Code Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired/Non-Renewable Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Amount__c</fullName>
        <description>Created by LM on 3/5/2014 for Phase2</description>
        <label>Potential Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Changed_By__c</fullName>
        <description>Created by LM on 3/5/2014 for Phase2</description>
        <label>Potential Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(SBQQ__Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Subfamily__c</fullName>
        <formula>Text(SBQQ__Product__r.Sub_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Subfamily</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns this subscription. This relationship is used for volume discount calculations.</description>
        <inlineHelpText>Account that owns this subscription. This relationship is used for volume discount calculations.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractNumber__c</fullName>
        <description>Number of associated contract.</description>
        <formula>SBQQ__Contract__r.ContractNumber</formula>
        <inlineHelpText>Number of associated contract.</inlineHelpText>
        <label>Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract which parents this subscription</description>
        <inlineHelpText>Contract that governs this subscription.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this subscription.</description>
        <formula>SBQQ__Product__r.SBQQ__UpgradeCredit__c</formula>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Price the end user paid for this subscription.</description>
        <inlineHelpText>Price paid for this subscription.</inlineHelpText>
        <label>Customer Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <formula>SBQQ__Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The last date this contract is valid.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List price for this subscription product.</description>
        <inlineHelpText>List price for this subscription product.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetPrice__c</fullName>
        <description>Net price for this subscription.</description>
        <inlineHelpText>Net price for this subscription.</inlineHelpText>
        <label>Net Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductId__c</fullName>
        <description>Convenience field to support integration with Service Cloud</description>
        <formula>SBQQ__Product__c</formula>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product used to sell this subscription.</description>
        <inlineHelpText>Product used to sell this subscription.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute prorated price.</description>
        <inlineHelpText>Calculated ratio used to compute prorated price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of this subscription product purchased by the customer.</description>
        <inlineHelpText>Quantity of this subscription product purchased by the customer.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this subscription.</description>
        <inlineHelpText>Quote line that generated this subscription.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPrice__c</fullName>
        <description>Renewal price for this subscription. Overrides default renewal price computation based on account&apos;s Renewal Pricing field.</description>
        <inlineHelpText>Enter renewal price to override default calculation.</inlineHelpText>
        <label>Renewal Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductId__c</fullName>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <formula>IF(ISBLANK(SBQQ__Product__r.SBQQ__RenewalProduct__c),SBQQ__Product__c,SBQQ__Product__r.SBQQ__RenewalProduct__c)</formula>
        <inlineHelpText>Product ID for the renewal subscription.</inlineHelpText>
        <label>Renewal Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuantity__c</fullName>
        <description>Quantity of this subscription product that will be renewed.</description>
        <inlineHelpText>Quantity of this subscription product that will be renewed.</inlineHelpText>
        <label>Renewal Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increased</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedDate__c</fullName>
        <description>Date this subscription was renewed as determined by date the renewal opportunity was contracted.</description>
        <inlineHelpText>Date this subscription was renewed. Blank means it has not been renewed.</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <formula>SBQQ__Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The first date this subscription is in effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date on which this subscription terminated.</description>
        <inlineHelpText>Date the subscription terminated. Automatically populated when covered asset is upgraded.</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Contract__c</fullName>
        <formula>SBQQ__ContractNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STX_Contract__c</fullName>
        <formula>SBQQ__Contract__r.STX_Contract_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STX Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STX_Service_Detail_Id__c</fullName>
        <description>Created by LM on 12/12/13 for da rollout</description>
        <externalId>true</externalId>
        <label>STX Service Detail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STX_Service_End_Date__c</fullName>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>STX Service End Date</label>
        <type>Date</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000000}</displayFormat>
        <label>Subscription #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Potential_Changes_req_Adjustment_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Potential_Adjustment_Reason__c,&apos;&apos;),
ISCHANGED(Potential_Amount__c)
)</errorConditionFormula>
        <errorDisplayField>Potential_Adjustment_Reason__c</errorDisplayField>
        <errorMessage>Potential Adjustment Reason is required for all Potential Amount changes</errorMessage>
    </validationRules>
</CustomObject>